--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "pretty-quick"
+    "format": "pretty-quick --ignore-path pnpm-lock.yaml",
+    "package:local": "svelte-kit package && pnpm i -D ./package"
   },
   "husky": {
     "hooks": {
@@ -31,9 +32,11 @@
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
     "pretty-quick": "^3.1.3",
+    "svead": "link:package",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.1",
+    "svelte2tsx": "^0.5.10",
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
