--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "pretty-quick --ignore-path pnpm-lock.yaml",
+    "format": "pretty-quick",
     "package:local": "svelte-kit package && pnpm i -D ./package"
   },
   "husky": {
