--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
   "name": "svead",
   "version": "0.0.1",
+  "author": {
+    "name": "Scott Spence",
+    "email": "yo@scottspence.dev",
+    "url": "https://scottspence.com"
+  },
+  "keywords": [
+    "svelte",
+    "sveltekit",
+    "head",
+    "meta-tags"
+  ],
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
