--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
+  "git.enableSmartCommit": true,
+  "git.postCommitCommand": "sync",
   "cSpell.words": ["Ahrefs", "pnpm", "svead", "sveltejs", "vite"]
 }
