--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "meta-tags"
   ],
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "pnpm un svead && pnpm i -D svead && svelte-kit build",
+    "dev": "vite dev",
+    "build": "pnpm un svead && pnpm i -D svead && vite build",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "preview": "vite preview",
     "prepare": "svelte-kit sync",
     "test": "playwright test",
     "check": "svelte-check --tsconfig ./tsconfig.json",
@@ -45,12 +45,13 @@
     "prettier-plugin-svelte": "2.7.0",
     "pretty-quick": "3.1.3",
     "svead": "0.0.3",
-    "svelte": "3.48.0",
+    "svelte": "3.49.0",
     "svelte-check": "2.8.0",
     "svelte-preprocess": "4.10.7",
     "svelte2tsx": "0.5.11",
     "tslib": "2.4.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "vite": "^2.9.14"
   },
   "type": "module",
   "repository": {
