--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -12,5 +12,5 @@ jobs:
         run: npm test
       - name: install playwright browsers
         run: npx playwright install --with-deps
-      - name: npm run test:e2e
-        run: npm run test:e2e=
+      - name: npm run test
+        run: npm run test
