--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - name: install dependencies
-        run: npm test
+        run: npm ci
       - name: install playwright browsers
         run: npx playwright install --with-deps
       - name: npm run test
