--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -6,11 +6,14 @@ jobs:
     name: Run end-to-end tests
     runs-on: ubuntu-latest
     steps:
+      - uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 6.0.2
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - name: install dependencies
-        run: npm ci
+        run: pnpm ci
       - name: install playwright browsers
         run: npx playwright install --with-deps
-      - name: npm run test
-        run: npm run test
+      - name: pnpm run test
+        run: pnpm run test
