--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
       - name: install dependencies
-        run: pnpm ci
+        run: npm i && npm ci
       - name: install playwright browsers
         run: npx playwright install --with-deps
       - name: pnpm run test
