--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -1,6 +1,8 @@
 # https://snyk.io/blog/how-to-add-playwright-tests-pr-ci-github-actions/
 name: "Tests: E2E"
-on: [pull_request]
+on: 
+  - push
+  - pull_request
 jobs:
   tests_e2e:
     name: Run end-to-end tests
