--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"fathom-client": "^3.5.0",
 		"husky": "^8.0.2",
 		"mdsvex": "^0.10.6",
 		"postcss": "^8.4.14",
