--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-node@v3
       - name: install dependencies
         run: npm i && npm ci
-      env:
+      env: |
         PUBLIC_FATHOM_ID: ${{ secrets.PUBLIC_FATHOM_ID }}
         PUBLIC_FATHOM_URL: ${{ secrets.PUBLIC_FATHOM_URL }}
       - name: install playwright browsers
