--- a/package.json
+++ b/package.json
@@ -15,57 +15,64 @@
 	],
 	"scripts": {
 		"dev": "vite dev",
-		"build": "pnpm un svead && pnpm i -D svead && vite build",
-		"package": "svelte-package",
+		"build": "vite build && npm run package",
 		"preview": "vite preview",
+		"package": "svelte-kit sync && svelte-package && publint",
+		"prepublishOnly": "npm run package",
 		"test": "playwright test",
-		"test:ci": "vitest run",
-		"test:unit": "vitest",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test:unit": "vitest",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "pretty-quick",
-		"package:local": "svelte-kit package && pnpm i -D ./package",
+		"format": "prettier --plugin-search-dir . --write .",
 		"contributors:add": "all-contributors add",
 		"contributors:generate": "all-contributors generate"
 	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "pretty-quick --staged"
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
 		}
+	},
+	"files": [
+		"dist"
+	],
+	"peerDependencies": {
+		"svelte": "^3.54.0"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.1",
-		"@sveltejs/package": "2.0.2",
-		"@tailwindcss/typography": "^0.5.8",
-		"@typescript-eslint/eslint-plugin": "^5.46.0",
-		"@typescript-eslint/parser": "^5.46.0",
+		"@sveltejs/kit": "^1.5.0",
+		"@sveltejs/package": "^2.0.0",
+		"@tailwindcss/typography": "^0.5.3",
+		"@typescript-eslint/eslint-plugin": "^5.45.0",
+		"@typescript-eslint/parser": "^5.45.0",
 		"all-contributors-cli": "^6.24.0",
-		"autoprefixer": "^10.4.13",
-		"daisyui": "^2.43.0",
-		"eslint": "^8.29.0",
+		"autoprefixer": "^10.4.7",
+		"daisyui": "^2.18.1",
+		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"fathom-client": "^3.5.0",
-		"husky": "^8.0.2",
 		"mdsvex": "^0.10.6",
-		"postcss": "^8.4.19",
+		"postcss": "^8.4.14",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.1",
-		"prettier-plugin-svelte": "^2.9.0",
-		"pretty-quick": "^3.1.3",
+		"prettier": "^2.8.0",
+		"prettier-plugin-svelte": "^2.8.1",
+		"publint": "^0.1.9",
 		"svead": "^0.0.4",
 		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.0",
-		"svelte-preprocess": "^5.0.0",
-		"tailwindcss": "^3.2.4",
+		"svelte-check": "^3.0.1",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.1.5",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.0.0",
-		"vitest": "^0.29.0"
+		"vite": "^4.2.0",
+		"vitest": "^0.25.3"
 	},
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
 	"type": "module",
 	"repository": {
 		"type": "git",
