test: :white_check_mark: add unit tests

--- a/package.json
+++ b/package.json
@@ -41,35 +41,37 @@
 		"svelte": "^3.54.0"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
+		"@playwright/test": "^1.32.2",
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@sveltejs/package": "^2.0.0",
-		"@tailwindcss/typography": "^0.5.3",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
+		"@sveltejs/kit": "^1.15.1",
+		"@sveltejs/package": "^2.0.2",
+		"@tailwindcss/typography": "^0.5.9",
+		"@testing-library/svelte": "^3.2.2",
+		"@typescript-eslint/eslint-plugin": "^5.57.1",
+		"@typescript-eslint/parser": "^5.57.1",
 		"all-contributors-cli": "^6.24.0",
-		"autoprefixer": "^10.4.7",
-		"daisyui": "^2.18.1",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"autoprefixer": "^10.4.14",
+		"daisyui": "^2.51.5",
+		"eslint": "^8.37.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"fathom-client": "^3.5.0",
+		"jsdom": "^21.1.1",
 		"mdsvex": "^0.10.6",
-		"postcss": "^8.4.14",
+		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"publint": "^0.1.9",
+		"prettier": "^2.8.7",
+		"prettier-plugin-svelte": "^2.10.0",
+		"publint": "^0.1.11",
 		"svead": "^0.0.4",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.5",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.2.0",
-		"vitest": "^0.25.3"
+		"svelte": "^3.58.0",
+		"svelte-check": "^3.2.0",
+		"svelte-preprocess": "^5.0.3",
+		"tailwindcss": "^3.3.1",
+		"tslib": "^2.5.0",
+		"typescript": "^5.0.3",
+		"vite": "^4.2.1",
+		"vitest": "^0.29.8"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
