--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
-		"test:ci": "vitest",
+		"test:ci": "vitest run",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"contributors:add": "all-contributors add",
@@ -55,7 +55,7 @@
 		"daisyui": "^3.5.1",
 		"eslint": "^8.46.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte3": "^4.0.0",
+		"eslint-plugin-svelte": "^2.32.4",
 		"fathom-client": "^3.5.0",
 		"jsdom": "^22.1.0",
 		"mdsvex": "^0.11.0",
@@ -72,7 +72,7 @@
 		"tslib": "^2.6.1",
 		"typescript": "^5.1.6",
 		"vite": "^4.4.9",
-		"vitest": "^0.34.1"
+		"vitest": "^0.33.0"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
