--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@svead/web",
+	"name": "web",
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
@@ -37,7 +37,8 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
-		"svelte": "^5.0.0-next.1",
+		"svead": "workspace:^",
+		"svelte": "5.0.0-next.29",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
