--- a/packages/svead/.prettierrc
+++ b/packages/svead/.prettierrc
@@ -1,8 +1,12 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
+	"trailingComma": "all",
+	"printWidth": 70,
+	"arrowParens": "avoid",
+	"proseWrap": "always",
 	"plugins": ["prettier-plugin-svelte"],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [
+		{ "files": "*.svelte", "options": { "parser": "svelte" } }
+	]
 }
