--- a/packages/svead/package.json
+++ b/packages/svead/package.json
@@ -34,7 +34,8 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test:unit": "vitest",
+		"coverage": "vitest run --coverage"
 	},
 	"exports": {
 		".": {
@@ -60,6 +61,7 @@
 		"@types/eslint": "8.56.1",
 		"@typescript-eslint/eslint-plugin": "^6.17.0",
 		"@typescript-eslint/parser": "^6.17.0",
+		"@vitest/coverage-v8": "^1.1.3",
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
