chore: :wrench: add patch package and jsdom

--- a/packages/svead/package.json
+++ b/packages/svead/package.json
@@ -35,7 +35,8 @@
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
-		"coverage": "vitest run --coverage"
+		"coverage": "vitest run --coverage",
+		"postinstall": "patch-package"
 	},
 	"exports": {
 		".": {
@@ -65,6 +66,8 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"jsdom": "^23.1.0",
+		"patch-package": "^8.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"publint": "^0.2.7",
