chore: :wrench: update scripts

--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
 		"dev:web": "pnpm run build:packages && pnpm --filter=web dev",
 		"build:web": "pnpm run build:packages && pnpm --filter=web build",
 		"preview:web": "pnpm run build:packages && pnpm --filter=web preview",
+		"test:unit:web": "pnpm run build:packages && pnpm --filter=web test:unit",
+		"test:int:web": "pnpm run build:packages && pnpm --filter=web test:integration",
+		"coverage:web": "pnpm run build:packages && pnpm --filter=web coverage",
 		"dev:svead": "pnpm run build:packages && pnpm --filter=svead dev",
 		"build:svead": "pnpm run build:packages && pnpm --filter=svead build",
-		"test:svead": "pnpm run build:packages && pnpm --filter=svead test:unit",
-		"coverage:web": "pnpm run build:packages && pnpm --filter=web coverage",
+		"preview:svead": "pnpm run build:packages && pnpm --filter=svead preview",
+		"test:unit:svead": "pnpm run build:packages && pnpm --filter=svead test:unit",
+		"test:int:svead": "pnpm run build:packages && pnpm --filter=svead test:integration",
 		"coverage:svead": "pnpm run build:packages && pnpm --filter=svead coverage",
 		"build:packages": "pnpm -r --filter=\"./packages/*\" run build",
 		"format": "pnpm -r --filter=\"./apps/*\" --filter=\"./packages/*\" run format",
