--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,4 +1,5 @@
 name: 'Tests: Unit'
+
 on:
   push:
     branches: [main]
@@ -8,10 +9,14 @@ on:
 
 jobs:
   unit_tests:
-    name: Run unit tests
+    name: Run unit tests for Package
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
       - uses: actions/cache@v3
         with:
           path: ~/.pnpm-store
@@ -21,14 +26,11 @@ jobs:
       - uses: pnpm/action-setup@v2.4.0
         with:
           version: 6.0.2
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18.x
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm recursive install
       - name: Run unit tests
-        run: pnpm run test:unit
+        run: pnpm run test:ci
+        working-directory: packages/svead
         env:
           PUBLIC_FATHOM_ID: ${{ secrets.PUBLIC_FATHOM_ID }}
           PUBLIC_FATHOM_URL: ${{ secrets.PUBLIC_FATHOM_URL }}
