--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
+		"test:ci": "vitest run",
 		"coverage": "vitest run --coverage"
 	},
 	"devDependencies": {
@@ -39,7 +40,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.9",
-		"svead": "workspace:^",
+		"svead": "workspace:*",
 		"svelte": "5.0.0-next.29",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.3.6",
