--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -8,9 +8,14 @@ on:
 
 jobs:
   tests_e2e:
-    name: Run end-to-end tests
+    name: Run end-to-end tests for Web App
     runs-on: ubuntu-latest
+
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18.x
       - uses: actions/cache@v3
         with:
           path: ~/.pnpm-store
@@ -20,16 +25,13 @@ jobs:
       - uses: pnpm/action-setup@v2.4.0
         with:
           version: 6.0.2
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18.x
       - name: Install dependencies
-        run: pnpm i
+        run: pnpm recursive install
       - name: Install playwright browsers
         run: npx playwright install --with-deps
       - name: Test
         run: pnpm run test
+        working-directory: apps/web
         env:
           PUBLIC_FATHOM_ID: ${{ secrets.PUBLIC_FATHOM_ID }}
           PUBLIC_FATHOM_URL: ${{ secrets.PUBLIC_FATHOM_URL }}
