--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -23,7 +23,7 @@ jobs:
           restore-keys: ${{ runner.os }}-pnpm-
       - uses: pnpm/action-setup@v2.4.0
         with:
-          version: 6.0.2
+          version: '^8.0.0'
       - name: Install dependencies
         run: pnpm i
         working-directory: apps/web
