--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -25,7 +25,7 @@ jobs:
           restore-keys: ${{ runner.os }}-pnpm-
       - uses: pnpm/action-setup@v2.4.0
         with:
-          version: 6.0.2
+          version: '^8.0.0'
       - name: Install dependencies
         run: pnpm recursive install
       - name: Run unit tests
