--- a/packages/svead/package.json
+++ b/packages/svead/package.json
@@ -36,8 +36,7 @@
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
 		"test:ci": "vitest run",
-		"coverage": "vitest run --coverage",
-		"postinstall": "patch-package"
+		"coverage": "vitest run --coverage"
 	},
 	"exports": {
 		".": {
@@ -68,11 +67,10 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.39.0",
 		"jsdom": "^24.0.0",
-		"patch-package": "^8.0.0",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"publint": "^0.2.8",
-		"svelte": "5.0.0-next.33",
+		"svelte": "5.0.0-next.139",
 		"svelte-check": "^3.7.1",
 		"tslib": "^2.6.2",
 		"typescript": "^5.4.5",
