--- a/packages/svead/package.json
+++ b/packages/svead/package.json
@@ -50,7 +50,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "5.0.0-next.29"
+		"svelte": "^4.0.0 || ^5.0.0"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.44.1",
