chore: :wrench: update spellings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,11 @@
 	"cSpell.words": [
 		"Ahrefs",
 		"daisyui",
+		"Kazuma",
 		"mdsvex",
 		"noopener",
 		"noreferrer",
+		"oekazuma",
 		"pnpm",
 		"spencee",
 		"svead",
