feat: :sparkles: add rehype plugins

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,8 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.6",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
 		"svead": "workspace:*",
 		"svelte": "5.0.0-next.244",
 		"svelte-check": "^4.0.1",
