--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,21 +17,21 @@
 		"build:packages": "pnpm -r --filter=\"../../packages/*\" run build"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.48.0",
+		"@playwright/test": "^1.48.1",
 		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/kit": "^2.7.1",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/kit": "^2.7.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tailwindcss/typography": "^0.5.15",
-		"@testing-library/svelte": "^5.2.3",
+		"@testing-library/svelte": "^5.2.4",
 		"@types/eslint": "9.6.1",
-		"@typescript-eslint/eslint-plugin": "^8.9.0",
-		"@typescript-eslint/parser": "^8.9.0",
+		"@typescript-eslint/eslint-plugin": "^8.10.0",
+		"@typescript-eslint/parser": "^8.10.0",
 		"@vitest/coverage-v8": "^2.1.3",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.13",
-		"eslint": "^9.12.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.44.1",
+		"eslint-plugin-svelte": "^2.45.1",
 		"fathom-client": "^3.7.2",
 		"jsdom": "^25.0.1",
 		"mdsvex": "^0.12.3",
@@ -43,7 +43,7 @@
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-slug": "^6.0.0",
 		"svead": "workspace:*",
-		"svelte": "5.0.0-next.262",
+		"svelte": "5.0.3",
 		"svelte-check": "^4.0.5",
 		"tailwindcss": "^3.4.14",
 		"tslib": "^2.8.0",
