--- a/packages/svead/package.json
+++ b/packages/svead/package.json
@@ -53,25 +53,25 @@
 		"svelte": "^4.0.0 || ^5.0.0"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.48.0",
+		"@playwright/test": "^1.48.1",
 		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/kit": "^2.7.1",
+		"@sveltejs/kit": "^2.7.2",
 		"@sveltejs/package": "^2.3.5",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
-		"@testing-library/svelte": "^5.2.3",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
+		"@testing-library/svelte": "^5.2.4",
 		"@types/eslint": "9.6.1",
-		"@typescript-eslint/eslint-plugin": "^8.9.0",
-		"@typescript-eslint/parser": "^8.9.0",
+		"@typescript-eslint/eslint-plugin": "^8.10.0",
+		"@typescript-eslint/parser": "^8.10.0",
 		"@vitest/coverage-v8": "^2.1.3",
-		"eslint": "^9.12.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.44.1",
+		"eslint-plugin-svelte": "^2.45.1",
 		"jsdom": "^25.0.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"publint": "^0.2.11",
 		"schema-dts": "^1.1.2",
-		"svelte": "5.0.0-next.262",
+		"svelte": "5.0.3",
 		"svelte-check": "^4.0.5",
 		"tslib": "^2.8.0",
 		"typescript": "^5.6.3",
