--- a/packages/svead/package.json
+++ b/packages/svead/package.json
@@ -52,6 +52,9 @@
 	"peerDependencies": {
 		"svelte": "^4.0.0 || ^5.0.0"
 	},
+	"dependencies": {
+		"schema-dts": "^1.1.2"
+	},
 	"devDependencies": {
 		"@playwright/test": "^1.50.1",
 		"@sveltejs/adapter-auto": "^4.0.0",
@@ -70,7 +73,6 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"publint": "^0.3.2",
-		"schema-dts": "^1.1.2",
 		"svelte": "5.26.2",
 		"svelte-check": "^4.1.4",
 		"tslib": "^2.8.1",
