--- a/packages/svead/package.json
+++ b/packages/svead/package.json
@@ -26,7 +26,8 @@
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
 		"preview": "vite preview",
-		"package": "svelte-kit sync && svelte-package && publint",
+		"package": "npm run package:readme && svelte-kit sync && svelte-package && publint",
+		"package:readme": "cp ../../README.md README.md",
 		"prepublishOnly": "npm run package",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
