--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.29.4",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3"
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.12"
 	}
 }
