--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,55 +1,54 @@
 {
 	"name": "web",
-	"version": "0.0.0",
 	"private": true,
+	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "pnpm run build:packages && vite dev",
 		"build": "pnpm run build:packages && vite build",
 		"preview": "vite preview",
-		"test": "npm run test:integration && npm run test:unit",
+		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"test:integration": "playwright test",
+		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
-		"coverage": "vitest run --coverage",
+		"test": "npm run test:unit -- --run && npm run test:e2e",
+		"test:e2e": "playwright test",
 		"build:packages": "pnpm -r --filter=\"../../packages/*\" run build"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.50.1",
-		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/kit": "^2.17.1",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/typography": "^0.5.16",
-		"@testing-library/svelte": "^5.2.6",
-		"@types/eslint": "9.6.1",
-		"@typescript-eslint/eslint-plugin": "^8.23.0",
-		"@typescript-eslint/parser": "^8.23.0",
-		"@vitest/coverage-v8": "^3.0.5",
-		"autoprefixer": "^10.4.20",
-		"daisyui": "^4.12.23",
-		"eslint": "^9.19.0",
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
+		"@playwright/test": "^1.49.1",
+		"@sveltejs/adapter-auto": "^6.0.0",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@tailwindcss/typography": "^0.5.15",
+		"@tailwindcss/vite": "^4.0.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/svelte": "^5.2.4",
+		"daisyui": "^5.0.43",
+		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^2.46.1",
+		"eslint-plugin-svelte": "^3.0.0",
 		"fathom-client": "^3.7.2",
+		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
 		"mdsvex": "^0.12.3",
-		"postcss": "^8.5.1",
-		"postcss-load-config": "^6.0.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"rehype-autolink-headings": "^7.1.0",
+		"rehype-external-links": "^3.0.0",
 		"rehype-slug": "^6.0.0",
 		"svead": "workspace:*",
-		"svelte": "5.26.2",
-		"svelte-check": "^4.1.4",
-		"tailwindcss": "^3.4.17",
-		"tslib": "^2.8.1",
-		"typescript": "^5.7.3",
-		"vite": "^6.0.11",
-		"vitest": "^3.0.5"
-	},
-	"type": "module"
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwindcss": "^4.0.0",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.20.0",
+		"vite": "^6.2.6",
+		"vitest": "3.1.4"
+	}
 }
