--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,37 +18,37 @@
 		"build:packages": "pnpm -r --filter=\"../../packages/*\" run build"
 	},
 	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@playwright/test": "^1.49.1",
-		"@sveltejs/adapter-auto": "^6.0.0",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/typography": "^0.5.15",
-		"@tailwindcss/vite": "^4.0.0",
-		"@testing-library/jest-dom": "^6.6.3",
-		"@testing-library/svelte": "^5.2.4",
+		"@eslint/compat": "^1.2.9",
+		"@eslint/js": "^9.28.0",
+		"@playwright/test": "^1.52.0",
+		"@sveltejs/adapter-auto": "^6.0.1",
+		"@sveltejs/kit": "^2.21.3",
+		"@sveltejs/vite-plugin-svelte": "^5.1.0",
+		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.1.8",
+		"@vitest/browser": "^3.2.2",
 		"daisyui": "^5.0.43",
-		"eslint": "^9.18.0",
-		"eslint-config-prettier": "^10.0.1",
-		"eslint-plugin-svelte": "^3.0.0",
+		"eslint": "^9.28.0",
+		"eslint-config-prettier": "^10.1.5",
+		"eslint-plugin-svelte": "^3.9.1",
 		"fathom-client": "^3.7.2",
-		"globals": "^16.0.0",
-		"jsdom": "^26.0.0",
-		"mdsvex": "^0.12.3",
-		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"globals": "^16.2.0",
+		"mdsvex": "^0.12.6",
+		"playwright": "^1.52.0",
+		"prettier": "^3.5.3",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.12",
 		"rehype-autolink-headings": "^7.1.0",
 		"rehype-external-links": "^3.0.0",
 		"rehype-slug": "^6.0.0",
 		"svead": "workspace:*",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.0.0",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.6",
-		"vitest": "3.1.4"
+		"svelte": "^5.33.18",
+		"svelte-check": "^4.2.1",
+		"tailwindcss": "^4.1.8",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.33.1",
+		"vite": "^6.3.5",
+		"vitest": "3.2.2",
+		"vitest-browser-svelte": "^0.1.0"
 	}
 }
