--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest",
 		"test": "npm run test:unit -- --run && npm run test:e2e",
 		"test:e2e": "playwright test",
+		"coverage": "vitest run --coverage",
 		"build:packages": "pnpm -r --filter=\"../../packages/*\" run build"
 	},
 	"devDependencies": {
@@ -27,6 +28,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.8",
 		"@vitest/browser": "^3.2.2",
+		"@vitest/coverage-v8": "^3.0.5",
 		"daisyui": "^5.0.43",
 		"eslint": "^9.28.0",
 		"eslint-config-prettier": "^10.1.5",
